# ComputerVision4

./: .gitignore  CMakeLists.txt  report.txt
data/: config.xml
include/: Detector.h  FileIO.h  MySVM.h  QueryXML.h  Utility.h
src/: Detector.cpp
src/controllers/: FileIO.cpp  MySVM.cpp  QueryXML.cpp  Utility.cpp
